# Dynamic-Fleet-Management

./: .gitignore  LICENSE  README.md  do-docs.bash  do-tests.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
results/: cppcheck_output.txt  cpplint_output.txt
src/dynamic_fleet_management/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/dynamic_fleet_management/.cache/clangd/index/: main.cpp.57651BF23DDC56D7.idx
src/dynamic_fleet_management/launch/: gazebo.launch.py  gazebo_launch.py  robot_launch.py  robot_state_publisher.launch.py  run_demo.launch.py  spawn_turtlebot3.launch.py
src/dynamic_fleet_management/scripts/: run_me_for_fun.bash
src/dynamic_fleet_management/src/: main.cpp
src/dynamic_fleet_management/test/: basic_test.cpp
src/dynamic_fleet_management/worlds/: warehouse.world
src/swarm_control/: CMakeLists.txt  README.md  compile_commands.json
src/swarm_control/.cache/clangd/index/: Agent.cpp.92D5410F859D0501.idx  Agent.h.A46165E9635337EB.idx  Blocks.cpp.D4B24D5FFE0757E6.idx  Circle.cpp.33210ACECA560460.idx  Definitions.h.C366D9DA62223B0C.idx  EnvironmentHeader.hpp.3ABB18256BC99170.idx  EnvironmentImplementation.cpp.BBC19D640EFC1CC2.idx  KdTree.cpp.1EC85CED43224EEB.idx  KdTree.h.0736419E2D6A34F5.idx  (+11 more)
src/swarm_control/include/: EnvironmentHeader.hpp  SimAgentHeader.hpp
src/swarm_control/libs/: CMakeLists.txt
src/swarm_control/libs/RVO2/: CMakeLists.txt
src/swarm_control/src/: EnvironmentImplementation.cpp  SimAgentImplementation.cpp
src/swarm_control/test/: CMakeLists.txt  main.cpp  test.cpp
(+5 files in other folders)
